--- a/style.css
+++ b/style.css
@@ -37,3 +37,11 @@ button{
     border-radius: 2px;
     font-family: 'Poppins', sans-serif;
 }
+
+@media only screen and (max-width: 1100px){
+    .color{
+        display: flex;
+        gap: 10px;
+        flex-direction: column;
+    }
+}
